[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/sonic.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=3]
[ext_resource path="res://scripts/HitBox.gd" type="Script" id=4]
[ext_resource path="res://sounds/memes/roblox-oof.mp3" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 148, 199, 59, 59 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 211, 199, 59, 59 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 85, 199, 59, 59 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 22, 199, 59, 59 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 420, 1039, 59, 58 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 483, 1039, 59, 58 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 355, 703, 59, 59 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 418, 703, 59, 59 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 481, 703, 59, 59 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 546, 787, 59, 59 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 609, 787, 59, 59 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 26, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 89, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 152, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 215, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 278, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 341, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 404, 788, 59, 58 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 467, 788, 59, 58 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 21 ), SubResource( 22 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 12.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 8, 19 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 8, 19 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 8, 19 )

[node name="Sonic" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "idle"
frame = 1
playing = true

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
shape = SubResource( 25 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 1, 2 )
shape = SubResource( 26 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 21
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 1, 2 )
shape = SubResource( 27 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
